# ojt-time-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tailwind.Dockerfile
app/: __init__.py  config.py  extensions.py
app/app_blueprints/: __init__.py  central_models.py
app/app_blueprints/auth/: __init__.py  auth_models.py  auth_repository.py  auth_views.py  firebase_auth_services.py  models.py  views.py
app/app_blueprints/auth/error_handlers/: signup_error_handlers.py
app/app_blueprints/auth/repositories/: signup_repository.py
app/app_blueprints/auth/utils/: signup_error_checker.py  validators.py
app/app_blueprints/core/: __init__.py  error_handling.py  views.py
app/app_blueprints/core/templates/: landing_page.html
app/app_blueprints/dashboard/student_dashboard/: __init__.py  models.py  student_dashboard_views.py  views.py
app/app_blueprints/home/: __init__.py  models.py  views.py
app/app_blueprints/public/: __init__.py  views.py
app/app_blueprints/templates/: base.html
app/blueprints/: __init__.py  central_models.py
app/blueprints/auth/: __init__.py  auth_models.py  auth_views.py
app/blueprints/auth/repositories/: login_repository.py  signup_repository.py
app/blueprints/auth/utils/: generators.py  signup_error_helpers.py  validators.py
app/blueprints/dashboard/adviser_dashboard/: __init__.py  adviser_dashboard_views.py
app/blueprints/dashboard/adviser_dashboard/repositories/: __init__.py  adv_dashboard_repository.py
app/blueprints/dashboard/adviser_dashboard/services/: adviser_dashboard_services.py
app/blueprints/dashboard/adviser_dashboard/templates/: adviser_dashboard.html  view_student.html
app/blueprints/dashboard/student_dashboard/: __init__.py  student_dashboard_models.py  student_dashboard_views.py
app/blueprints/handlers/: 404.html  503.html
app/blueprints/public/: public_views.py
app/blueprints/templates/: home_base.html
app/sql/: get_ojt_list.sql  get_ojt_list_filter.sql
app/src/: input.css
app/static/css/: main.css
app/test/: unit_test.py
app/test/repository_unit_test/: __init__.py  student_repo_test.py
app/test/repository_unit_test/templates/: repo_unit_test.html  unit_db.html
migrations/versions/: 1a49492f88f1_.py  218545da6e4d_.py  3bbc2cbc0228_.py  4ea1f3423842_.py  5b1be3b98bd2_.py  82324cd87822_.py  9d3678a8d626_.py  c4501aca670e_.py  fb17b9ef52ab_.py
(+15 files in other folders)
