[project]
name = "ojt-time-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "firebase-admin==6.8.0",
    "flask==3.1.0",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "google-api-core==2.24.2",
    "google-api-python-client==2.169.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.20.2",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.1.1",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "msgpack==1.1.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psycopg[binary]>=3.2.9",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.0",
    "pytz>=2025.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "setuptools==80.1.0",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.2",
    "uritemplate==4.1.1",
    "urllib3==1.26.20",
    "werkzeug==3.1.3",
]
